# pulumox-template

./: .gitignore  Pulumi.yaml  README.md  __main__.py  ansible.cfg  mise.toml  pyproject.toml
docs/: 20250814_etude_yaml_templates.ipynb  plan.excalidraw
src/: __init__.py
src/provisionner/: __init__.py  base.py  proxmox.py
src/tools/: file.py  pulumi_inventory.py
templates/_test/: 1.yml  _default.yml  gentpl_struct.py
