[project]
name = "pulumox"
version = "0.1.0"
description = "setup VMs (Linux/Mac/Windows) blazing fast on Proxmox with Pulumi."
requires-python = ">=3.9,<3.13"
dependencies = [
    "requests>=2.32.4",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-proxmoxve>=7.0.0",
    "pulumi-command>=1.1.0",
    "ansible-runner>=2.4.1",
    #"fattools>=1.1.6",
    #"loguru>=0.7.3",
    #"pycdlib>=1.14.0",
    #"pyfatfs>=1.1.0",
    #"pytsk3>=20250729",
    #"tqdm>=4.67.1",
]

[tool.uv.sources]
fattools = { git = "https://github.com/nnosal/FATtools.git", rev = "master" }
